overflowing pic fixed

--- a/frontend/src/styles/_home_2-top-image-header.scss
+++ b/frontend/src/styles/_home_2-top-image-header.scss
@@ -4,7 +4,7 @@
 .top-image-header {
   grid-area: header;
   height: 100svh;
-  overflow: hidden;
+  // overflow: hidden;
 
   display: grid;
   grid-template-columns: repeat(5, minmax(auto, 1fr));
